<?xml version="1.0" encoding="UTF-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent" 
    android:descendantFocusability="beforeDescendants"
	android:focusableInTouchMode="true">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <TableLayout
            android:id="@+id/pricesTable"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:shrinkColumns="*"
            android:stretchColumns="*" >

            <TableRow
                android:id="@+id/tableHeaderRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_span="4"
                    android:gravity="center"
                    android:text="@string/currentprices"
                    android:textSize="18dp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:id="@+id/tableFuelTypesRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal" >

                <TextView
                    android:id="@+id/blankTextView"
                    android:layout_width="match_parent"
                    android:text="" >
                </TextView>

                <TextView
                    android:id="@+id/petrol95"
                    android:layout_gravity="center_vertical|center_horizontal|center"
                    android:gravity="center|center_horizontal|center_vertical|clip_horizontal"
                    android:text="@string/bens95"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:typeface="serif" >
                </TextView>

                <TextView
                    android:id="@+id/petrol98"
                    android:layout_gravity="center_vertical|center_horizontal|center"
                    android:gravity="center|center_horizontal|center_vertical|clip_horizontal"
                    android:text="@string/bens98"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:typeface="serif" >
                </TextView>

                <TextView
                    android:id="@+id/diesel"
                    android:layout_gravity="center_vertical|center_horizontal|center"
                    android:gravity="center|center_horizontal|center_vertical|clip_horizontal"
                    android:text="@string/diisel" 
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:typeface="serif" >
                </TextView>
            </TableRow>
        </TableLayout>
    </ScrollView>

    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/reset" />

    <Button
        android:id="@+id/calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/reset"
        android:text="@string/calculate" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:id="@+id/litersInput"
        android:minHeight="100dp"
        android:maxHeight="100dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/calculate"
        android:layout_alignTop="@+id/calculate"
        android:max="149"
        android:mirrorForRtl="true"
        android:layout_centerInParent="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/liter"
        android:id="@+id/litersAmount"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/calculate"
        android:layout_centerInParent="true" />

</RelativeLayout>